--- a/src/messages/Message.css
+++ b/src/messages/Message.css
@@ -1,5 +1,5 @@
 .message__block {
-    width: 600px;
+    max-width: 600px;
 }
 
 
@@ -28,6 +28,8 @@
 .message__box {
     background-color: #082103;
     position: relative;
+    max-width: 600px;
+
 }
 
 .message__box:before {
@@ -66,6 +68,8 @@
 .message__box-text {
     font-size: 14px;
     color: #bccfbb;
+    max-width: 200px;
+    overflow: auto;
 }
 
 .message__box-time {
